Ensure long code blocks wrap

--- a/source/_assets/sass/_prism.scss
+++ b/source/_assets/sass/_prism.scss
@@ -13,7 +13,7 @@ https://prismjs.com/download.html#themes=prism-tomorrow&languages=markup+css+cli
 	 font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
 	 font-size: 1em;
 	 text-align: left;
-	 white-space: pre;
+	 white-space: pre-wrap;
 	 word-spacing: normal;
 	 word-break: normal;
 	 word-wrap: normal;
